--- a/css/index.html
+++ b/css/index.html
@@ -7,11 +7,24 @@
 </head>
 <body>
     <h1>Trilha de CSS</h1>
+    
     <h2>Fundamentos do CSS</h2>
     <ul>
         <li>Seletores e seus tipos: <a href="seletores.html">seletores.html</a></li>
         <li>Agrupamento de seletores e tipos de combinadores: <a href="combinadores.html">combinadores.html</a></li>
         <li>Dimensionamento e espaçamento: <a href="dimensoes.html">dimensoes.html</a></li>
+    </ul>
+
+    <h2>Estilizações Básicas com CSS</h2>
+    <ul>
+        <li>Cores pré-definidas, RGB, HEX, HSL: <a href="cores.html">cores.html</a></li>
+        <li>Imagens com object-fit e object-position: <a href="imagens.html">imagens.html</a></li>
+        <li>Fundo dos elementos e posicionamento: <a href="background.html">background.html</a></li>
+        <li>Bordas e posicionamento: <a href="bordas.html">bordas.html</a></li>
+        <li>Fontes e personalização: <a href="fontes.html">fontes.html</a> </li>
+        <li>Textos e personalização: <a href="textos.html">textos.html</a></li>
+        <li>Sombras em imagens e textos: <a href="sombras.html">sombras.html</a></li>
+        <li>Transparência, overflow e configurações padrão: <a href="outros.html">outros.html</a></li>
     </ul>
 </body>
 </html>
