add responsividade no css

--- a/css/index.html
+++ b/css/index.html
@@ -26,5 +26,13 @@
         <li>Sombras em imagens e textos: <a href="sombras.html">sombras.html</a></li>
         <li>Transparência, overflow e configurações padrão: <a href="outros.html">outros.html</a></li>
     </ul>
+
+    <h2>Responsividade do CSS</h2>
+    <ul>
+        <li>Layout flexível com multicolunas: <a href="multicol.html">multicol.html</a></li>
+        <li>Layout flexível com flexbox: <a href="flexbox.html">flexbox.html</a></li>
+        <li>Layout flexível com grid: <a href="grid.html">grid.html</a></li>
+        <li>Técnica Mobile-First: <a href="mobile.html">mobile.html</a></li>
+    </ul>
 </body>
 </html>
