add posicionamento de elementos com css

--- a/css/index.html
+++ b/css/index.html
@@ -34,5 +34,23 @@
         <li>Layout flexível com grid: <a href="grid.html">grid.html</a></li>
         <li>Técnica Mobile-First: <a href="mobile.html">mobile.html</a></li>
     </ul>
+
+    <h2>Posicionamento de Elementos com CSS</h2>
+    <ul>
+        <li>Display Block/Inline/Inline-Block: <a href="display.html">display.html</a></li>
+        <li>Alinhamento de elementos inline: <a href="alinhamento.html">alinhamento.html</a></li>
+        <li>Posicionamento de elementos: <a href="posicao.html">posicao.html</a></li>
+        <li>Posicionamento com z-index: <a href="zindex.html">zindex.html</a></li>
+    </ul>
+
+    <h2>Trabalhando com Flexbox no CSS</h2>
+    <ul>
+        <li></li>
+    </ul>
+
+    <h2>Dominando Grid Layouts no CSS</h2>
+    <ul>
+        <li></li>
+    </ul>
 </body>
 </html>
