add flexbox e grid layout

--- a/css/index.html
+++ b/css/index.html
@@ -45,12 +45,13 @@
 
     <h2>Trabalhando com Flexbox no CSS</h2>
     <ul>
-        <li></li>
+        <li>Conceitos, eixos e propriedades do flexbox: <a href="flexbox2.html">flexbox2.html</a></li>
     </ul>
 
     <h2>Dominando Grid Layouts no CSS</h2>
     <ul>
-        <li></li>
+        <li>Conceitos, propriedades e funções do grid: <a href="grid2.html">grid2.html</a></li>
+        <li>Alinhamento</li>
     </ul>
 </body>
 </html>
