--- a/html/index.html
+++ b/html/index.html
@@ -15,49 +15,49 @@
             Introdução ao HTML na Prática
         </h3>
         <ul>
-            <li>Testando alguns elementos HTML: <a href="firststeps.html" target="_blank">firststeps.html</a></li>
-            <li>Implementação de links: <a href="index.html" target="_blank">fslinks.html</a></li>
+            <li>Testando alguns elementos HTML: <a href="./introdução/firststeps.html" target="_blank">firststeps.html</a></li>
+            <li>Implementação de links: <a href="index.html" target="_blank">index.html</a></li>
         </ul>
 
         <h3>
             Trabalhando com Formulários em HTML
         </h3>
         <ul>
-            <li>Criação de formulários: <a href="forms.html" target="_blank">forms.html</a></li>
-            <li>Implementação de inputs: <a href="inputs.html" target="_blank">inputs.html</a></li>
-            <li>Funcionamento do Checkbox e Radio: <a href="checkboxradio.html" target="_blank">checkboxradio.html</a></li>
-            <li>Implementação de botões: <a href="buttons.html" target="_blank">buttons.html</a></li>
-            <li>Implementação de select e textarea: <a href="selecttextarea.html" target="_blank">selecttextarea.html</a></li>
+            <li>Criação de formulários: <a href="./formulários/forms.html" target="_blank">forms.html</a></li>
+            <li>Implementação de inputs: <a href="./formulários/inputs.html" target="_blank">inputs.html</a></li>
+            <li>Funcionamento do Checkbox e Radio: <a href="./formulários/checkboxradio.html" target="_blank">checkboxradio.html</a></li>
+            <li>Implementação de botões: <a href="./formulários/buttons.html" target="_blank">buttons.html</a></li>
+            <li>Implementação de select e textarea: <a href="./formulários/selecttextarea.html" target="_blank">selecttextarea.html</a></li>
         </ul>
 
         <h3>
             Estruturando seu HTML + Formatações
         </h3>
         <ul>
-            <li>Diferentes formas de formatação: <a href="formatacao.html" target="_blank">formatacao.html</a></li>
-            <li>Implementação do Fieldset: <a href="fieldset.html" target="_blank">fieldset.html</a></li>
+            <li>Diferentes formas de formatação: <a href="./estruturação e formatação/formatacao.html" target="_blank">formatacao.html</a></li>
+            <li>Implementação do Fieldset: <a href="./estruturação e formatação/fieldset.html" target="_blank">fieldset.html</a></li>
         </ul>
 
         <h3>
             Trabalhando com Mídias Utilizando HTML
         </h3>
         <ul>
-            <li>Imagem, áudio, vídeo, track e iframe: <a href="midia.html" target="_blank">midia.html</a></li>
+            <li>Imagem, áudio, vídeo, track e iframe: <a href="./mídias/midia.html" target="_blank">midia.html</a></li>
         </ul>
 
         <h3>
             Criando Tabelas com HTML
         </h3>
         <ul>
-            <li>Tabelas: <a href="tabelas.html" target="_blank">tabelas.html</a></li>
-            <li>Tabela formatada com CSS: <a href="tabcss.html" target="_blank">tabcss.html</a></li>
+            <li>Tabelas: <a href="./tabelas/tabelas.html" target="_blank">tabelas.html</a></li>
+            <li>Tabela formatada com CSS: <a href="./tabelas/tabcss.html" target="_blank">tabcss.html</a></li>
         </ul>
 
         <h3>
             Entendendo HTML Semântico
         </h3>
         <ul>
-            <li>Estruturação e formatação de página HTML: <a href="semantica.html" target="_blank">semantica.html</a></li>
+            <li>Estruturação e formatação de página HTML: <a href="./html semântico/semantica.html" target="_blank">semantica.html</a></li>
         </ul>
     </body>
 </html>
